--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Entertainment Web App",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -23,5 +23,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
